# snake

./: README.md
client/: bootstrap.js  index.css  index.html  index.js  lobby.html  main.html  main.js  package-lock.json  package.json  snake.js  webpack.config.js
client/leaderboard/: leaderboard.css  leaderboard.html  leaderboard.js
client/multiplayer/: multiplayer.js
client/pages/landing/: main.css  main.html
client/pages/lobby/: lobby.html
client/pages/ranking/: rankingPage.css  rankingPage.html  rankingPage.js
client/pages/snake/: snake.css  snake.html  snake.js
libs/game/: Cargo.toml
libs/game-wasm/: Cargo.toml
libs/game-wasm/src/: canvas.rs  config.rs  item.rs  lib.rs  snake.rs
libs/game-wasm/src/snake/: segment.rs  snake_head.rs  snake_segment.rs
libs/game/src/: config.rs  item.rs  lib.rs  snake.rs
libs/game/src/snake/: segment.rs  snake_head.rs  snake_segment.rs
libs/multiplayer/: Cargo.toml
server/: package-lock.json  package.json  webpack.config.js
server/src/: index.js
