[package]
name = "lib-game-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lib-game = { path = "../game" }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
serde = { version = "1.0.136", features = ["derive"] }
getrandom = { version = "0.2.5", features = ["js"] }
js-sys = "0.3.56"
gloo-events = "0.1.1"

[dependencies.web-sys]
version = "0.3.56"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "KeyboardEvent",
  "console",
]


[lib]
crate-type = ["cdylib"]
